--- a/package.json
+++ b/package.json
@@ -13,38 +13,39 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^2.4.8",
-    "@angular/compiler": "^2.4.8",
-    "@angular/core": "^2.4.8",
-    "@angular/flex-layout": "^2.0.0-rc.1",
-    "@angular/forms": "^2.4.8",
-    "@angular/http": "^2.4.8",
-    "@angular/material": "^2.0.0-beta.2",
-    "@angular/platform-browser": "^2.4.8",
-    "@angular/platform-browser-dynamic": "^2.4.8",
-    "@angular/router": "^3.4.8",
+    "@angular/common": "^10.2.0",
+    "@angular/compiler": "^10.2.0",
+    "@angular/core": "^10.2.0",
+    "@angular/flex-layout": "^10.2.0",
+    "@angular/forms": "^10.2.0",
+    "@angular/http": "^10.2.0",
+    "@angular/material": "^10.2.0",
+    "@angular/platform-browser": "^10.2.0",
+    "@angular/platform-browser-dynamic": "^10.2.0",
+    "@angular/router": "^10.2.0",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
-    "rxjs": "^5.2.0",
+    "rxjs": "^6.5.3",
     "ts-helpers": "^1.1.2",
-    "zone.js": "^0.7.7"
+    "zone.js": "^0.10.3"
   },
   "devDependencies": {
-    "@angular/cli": "^11.0.4",
-    "@angular/compiler-cli": "^2.4.8",
+    "@angular-devkit/build-angular": "~0.1002.0",
+    "@angular/cli": "^10.2.0",
+    "@angular/compiler-cli": "^10.2.0",
     "@types/jasmine": "2.5.43",
     "@types/node": "^7.0.5",
     "codelyzer": "~2.0.1",
-    "jasmine-core": "2.5.2",
-    "jasmine-spec-reporter": "3.2.0",
-    "karma": "1.5.0",
-    "karma-chrome-launcher": "^2.0.0",
+    "jasmine-core": "^3.5.0",
+    "jasmine-spec-reporter": "^3.2.0",
+    "karma": "^4.1.0",
+    "karma-chrome-launcher": "^2.2.0",
     "karma-cli": "^1.0.1",
     "karma-jasmine": "^1.1.0",
     "karma-remap-istanbul": "^0.6.0",
-    "protractor": "~5.1.1",
-    "ts-node": "2.1.0",
-    "tslint": "^4.4.2",
-    "typescript": "~2.1.6"
+    "protractor": "~5.4.2",
+    "ts-node": "^8.6.2",
+    "tslint": "^6.1.3",
+    "typescript": "~4.0.2"
   }
 }
