--- a/package.json
+++ b/package.json
@@ -13,37 +13,35 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^10.2.0",
-    "@angular/compiler": "^10.2.0",
-    "@angular/core": "^10.2.0",
-    "@angular/flex-layout": "^10.2.0",
-    "@angular/forms": "^10.2.0",
-    "@angular/http": "^10.2.0",
-    "@angular/material": "^10.2.0",
-    "@angular/platform-browser": "^10.2.0",
-    "@angular/platform-browser-dynamic": "^10.2.0",
-    "@angular/router": "^10.2.0",
+    "@angular/animations": "^11.0.4",
+    "@angular/cdk": "^11.0.2",
+    "@angular/common": "^11.0.4",
+    "@angular/compiler": "^11.0.4",
+    "@angular/core": "^11.0.4",
+    "@angular/flex-layout": "11.0.0-beta.33",
+    "@angular/forms": "^11.0.4",
+    "@angular/material": "^11.0.2",
+    "@angular/platform-browser": "^11.0.4",
+    "@angular/platform-browser-dynamic": "^11.0.4",
+    "@angular/router": "^11.0.4",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
-    "rxjs": "^6.5.3",
-    "ts-helpers": "^1.1.2",
-    "zone.js": "^0.10.3"
+    "rxjs": "^6.5.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1002.0",
-    "@angular/cli": "^10.2.0",
-    "@angular/compiler-cli": "^10.2.0",
-    "@types/jasmine": "2.5.43",
-    "@types/node": "^7.0.5",
-    "codelyzer": "~2.0.1",
+    "@angular-devkit/build-angular": "~0.1100.0-rc.1",
+    "@angular/cli": "^11.0.4",
+    "@angular/compiler-cli": "^11.0.4",
+    "@types/jasmine": "3.5.10",
+    "@types/node": "^12.11.1",
     "jasmine-core": "^3.5.0",
     "jasmine-spec-reporter": "^3.2.0",
-    "karma": "^4.1.0",
+    "karma": "~5.1.0",
     "karma-chrome-launcher": "^2.2.0",
-    "karma-cli": "^1.0.1",
+    "karma-cli": "^2.0.0",
     "karma-jasmine": "^1.1.0",
     "karma-remap-istanbul": "^0.6.0",
-    "protractor": "~5.4.2",
+    "protractor": "^7.0.0",
     "ts-node": "^8.6.2",
     "tslint": "^6.1.3",
     "typescript": "~4.0.2"
